--------------------------------------------------------------------------------
icesSAG 1.3-6 (2018-08-17)
--------------------------------------------------------------------------------
o Fixed bug in parsing of XML tables.  Function now reads the WSDL data that is
  included as an internal data set (list of variable names)


--------------------------------------------------------------------------------
icesSAG 1.3-5 (2018-06-08)
--------------------------------------------------------------------------------
o added function getStockSourceData() to download the XML file that was
  origionally uploaded.

--------------------------------------------------------------------------------
icesSAG 1.3-4 (2018-05-01)
--------------------------------------------------------------------------------
o added function getLatestStockAdviceList()
o export print methods for sag.list and sag.data.frame for fishdata and fishinfo
  objects used to upload data.
o improved personal access token logic
o improved help documentation
o Added StockCategory, Purpose, ModelType, ModelName to upload functions
o Added filter for assessment Purpose in getSAG()
o fixed bugs arising from changes to xml2 package
o fixed bug arsing from change in ICES Datsu web service

--------------------------------------------------------------------------------
icesSAG 1.3-2 (2017-05-06)
--------------------------------------------------------------------------------
o User sets SAG database access token in a ~/.Renviron_SG file.
o Addressed non CRAN compliant behaviour: user must create .Renviron file
  themselves.


--------------------------------------------------------------------------------
icesSAG 1.3-1 (2017-05-04)
--------------------------------------------------------------------------------
o Improved createSAGxml() internal data validation.


--------------------------------------------------------------------------------
icesSAG 1.3-0 (2017-04-05)