@@ -18,12 +18,13 @@
 #' @author Colin Millar and Scott Large.
 #'
 #' @examples
+#' \dontrun{
 #' assessmentKey <- findAssessmentKey("cod", 2015)
 #' graphs <- getSAGGraphs(assessmentKey[1])
 #' plot(graphs)
 #' # note this stock only has one graph see:
 #' # http://standardgraphs.ices.dk/ViewCharts.aspx?key=8309
-#'
+#' }
 #' @export
 
 getSAGGraphs <- function(assessmentKey, ...) {
