@@ -20,9 +20,11 @@
 #' @author Colin Millar.
 #'
 #' @examples
+#' \dontrun{
 #' assessmentKey <- findAssessmentKey("cod-2224", year = 2016)
 #' status <- getStockStatusValues(assessmentKey)
 #' status
+#' }
 #'
 #' @export
 
