@@ -20,10 +20,11 @@
 #' @author Colin Millar and Scott Large.
 #'
 #' @examples
+#' \dontrun{
 #' assessmentKey <- findAssessmentKey("cod-2224", year = 2015)
 #' sumtab <- getYSBRSummaryTable(assessmentKey)
 #' head(sumtab)
-#'
+#' }
 #' @export
 
 getYSBRSummaryTable <- function(assessmentKey, ...) {
