@@ -11,6 +11,7 @@
 #' @return A data frame with SAG chart type IDs, settings IDs and setting values.
 #'
 #' @examples
+#' \dontrun{
 #' key <- findAssessmentKey("cod.21.1", 2017)
 #' graphs <- getSAGGraphs(key[1])
 #' plot(graphs)
@@ -26,6 +27,7 @@
 #' setSAGSettingForAStock(key [1], 4, 1, "SSB of cod.21.1 in 2017",
 #' FALSE)
 #' plot(chart2)
+#' }
 #'
 #' @rdname getsetStockSettings
 #' @name getsetSAGSettingsForAStock
