@@ -32,8 +32,9 @@ A vector of keys (default) or a data frame if full is TRUE.
 Find a lookup key corresponding to a stock in a given assessment year.
 }
 \examples{
+\dontrun{
 findAssessmentKey("cod-347d", 2015, full = TRUE)
-
+}
 }
 \seealso{
 \code{\link{getListStocks}} gets a list of stocks.
