@@ -19,9 +19,11 @@ Get summary results of historical stock size, recruitment, and fishing
 pressure.
 }
 \examples{
+\dontrun{
 assessmentKey <- findAssessmentKey("cod-2224", year = 2016)
 status <- getStockStatusValues(assessmentKey)
 status
+}
 
 }
 \seealso{
