@@ -3,6 +3,7 @@ icesSAG 1.3-6 (2018-08-17)
 --------------------------------------------------------------------------------
 o Fixed bug in parsing of XML tables.  Function now reads the WSDL data that is
   included as an internal data set (list of variable names)
+o Set all examples to dontrun
 
 
 --------------------------------------------------------------------------------
